24. Added Flag in the Tool info file whether to remove aligned bam or not default is YES
25. Added a paramter in the run info file for somatic caller SOMATIC_CALLER=SOMATICSNIPER/JOINTSNVMIX/MUTECT
26. Addded paramter for unified Genotyper to call max of 4 alternate allele at the given position, There are possibility of 5 alternate alllele at the given position. If we find multiple alternate allele then we just parse that vcf into a newer vcf and discard those for annotation purpose. We output a seperate vcf for multi-alleleic calls in Reports_per_sample folder.
27. Sample info configuration files formats are changed, so please reveiw those before running the workflow.
28. Combine variant module for GATK is buggy so replacing that to vcf-concat from vcftools.
29. Somatic indel caller from GATK has bug, vcf file lacks the header GT, script will add that column to the vcf file.
30. Somatic snipper vcf doesn't provide AD field but it provides BCOUNT which can be used to calculate the AD values, added a script to do the same.
31. Added new script to update the secondary dashboard information on the PI portal, if user is running mayo samples then use mayo or realign-mayo as analysis 
32.  

### Version 1.0

2/3/2012

*** added a parameter -x 6 in novoalign script to allow more soft clipping reads
***

*** BUGS fixed

*** removed header from BAM when we split the bam to run somatic sniper
*** added paths to matlab and changed paramters in segseq to work
*** fixed the paramters for crest
*** scripts rading hard coded column number,, changed to read the header to figure out column number
*** scripts not working properly for exome, changed it to wrok for exome
*** statitical numbers were not correct